fixed alignment issues

--- a/app/aboutus/page.css
+++ b/app/aboutus/page.css
@@ -23,6 +23,10 @@
     box-shadow: 0 15px 12px rgba(0, 0, 0, 0.4);
   }
 
+  .pastor-container-card {
+    margin: 0 auto
+  }
+
   .card{
     position: relative;
     width: 400px;
@@ -136,7 +140,6 @@
       position: relative;
       width: 250px;
       height: 270px;
-      margin-left: 55px;
       background: #fff;
       box-shadow: 0 15px 60px rgba(0,0,0, .5);
       border-radius: 15px;
